[gd_scene load_steps=2 format=3 uid="uid://dl17mnvx428mm"]

[ext_resource type="Script" uid="uid://bj3y1j5ow43wf" path="res://Scripts/hud.gd" id="1_sprlj"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_sprlj")

[node name="RootControl" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.002
anchor_right = 1.003
anchor_bottom = 1.0020001
offset_top = -1.296
offset_right = 0.5439453
offset_bottom = -0.2960205
metadata/_edit_use_anchors_ = true

[node name="PlayerLifeLabel" type="Label" parent="RootControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.57500005
offset_left = 82.0
offset_top = 18.0
offset_right = -958.0
offset_bottom = -318.475
text = "O"

[node name="WaterPercentLabel" type="Label" parent="RootControl"]
layout_mode = 0
offset_left = 89.0
offset_top = 42.0
offset_right = 148.0
offset_bottom = 77.0
text = "100%"

[node name="RoomBar" type="Control" parent="RootControl"]
layout_mode = 1
anchor_right = 41.357002
anchor_bottom = 50.000004
offset_left = -1.0
offset_top = -2.0
offset_right = -0.99609375
offset_bottom = -2.0

[node name="Background" type="ColorRect" parent="RootControl/RoomBar"]
custom_minimum_size = Vector2(160, 14)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.003
anchor_bottom = 0.001
offset_left = 276.0
offset_top = 27.0
offset_right = 887.5739
offset_bottom = 20.549992
color = Color(0.07327741, 0.022158388, 0.052080005, 1)

[node name="ColorRect" type="ColorRect" parent="RootControl/RoomBar"]
custom_minimum_size = Vector2(160, 14)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.001
anchor_bottom = 0.001
offset_left = 289.0
offset_top = 31.0
offset_right = 966.1913
offset_bottom = 15.549992
color = Color(0.43529412, 0.02745098, 0.02745098, 1)

[node name="RoomLabel" type="Label" parent="RootControl/RoomBar"]
layout_mode = 0
offset_left = 624.0
offset_top = 26.0
offset_right = 664.0
offset_bottom = 49.0
text = "100"
